--- a/veterinaria_patitas/veterinaria_patitas/registro.html
+++ b/veterinaria_patitas/veterinaria_patitas/registro.html
@@ -54,64 +54,14 @@
         </nav>
     </header>
 
-       <!--carrousel--->
-    <div class="carousel">
-        <div class="carousel__contenedor">
-            <button aria-label="Anterior" class="carousel__anterior">
-                <i class="fas fa-chevron-left"></i>
-            </button>
-            <div class="carousel__lista">
-                <div class="carousel__elemento">
-                    <img src="img/3.jpg" alt="Felinos Amigos">
-                    <p> </p>
-                </div>
-                <div class="carousel__elemento">
-                    <img src="img/2.jpg" alt="De Compras">
-                </div>
-                <div class="carousel__elemento">
-                    <img src="img/4.jpg" alt="Grupo de perros">
-                    <p> </p>
-                </div>
-                <div class="carousel__elemento">
-                    <img src="img/1.jpg" alt="Saludo canino">
-                    <p></p>
-                </div>
-
-                <div class="carousel__elemento">
-                    <img src="img/6.jpg" alt="Hola Doctor">
-                    <p> </p>
-                </div>
-                <div class="carousel__elemento">
-                    <img src="img/7.jpg" alt="Perro acostado">
-                    <p></p>
-                </div>
-                <div class="carousel__elemento">
-                    <img src="img/8.jpg" alt="Perro y niño">
-                    <p></p>
-                </div>
-                <div class="carousel__elemento">
-                    <img src="img/9.jpg" alt="Perro y veterinario">
-                    <p></p>
-                </div>
-
-            </div>
-
-            <button aria-label="Siguiente" class="carousel__siguiente">
-
-                <i class="fas fa-chevron-right"></i>
-            </button>
-        </div>
-        <p> "No sabemos nada del amor si no queremos a los animales" (Fred Wander)</p>
-        <div role="tablist" class="carousel__indicadores"></div>
-        
-    </div>
+       
 
     <Section class="formulario">
-        <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
+        <form method="POST" action="registro.php" class="row g-3 needs-validation" novalidate>
             <h1 class=titulo>Registrate</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="text" name="nombre" class="form-control"
-                        id="validationCustom01" placeholder="Nombre" required pattern="[A-Za-z0-9]{2,40}"
+                        id="validationCustom01" placeholder="Nombre" required pattern="{2,40}"
                         title="">
                     <div class="valid-feedback"> OK!</div>
                     <div class="invalid-feedback"> Complete los datos con letras y números. Tamaño mínimo: 2 caracteres. Tamaño máximo: 40  caracteres.</div>
