actualizacion de archivos y conexiones a base de datos

--- a/veterinaria_patitas/veterinaria_patitas/registro.html
+++ b/veterinaria_patitas/veterinaria_patitas/registro.html
@@ -57,7 +57,7 @@
        
 
     <Section class="formulario">
-        <form method="POST" action="registro.php" class="row g-3 needs-validation" novalidate>
+        <form method="POST" action="php/registro.php" class="row g-3 needs-validation" novalidate>
             <h1 class=titulo>Registrate</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="text" name="nombre" class="form-control"
