Baja de la cuenta usuario

--- a/veterinaria_patitas/veterinaria_patitas/baja.html
+++ b/veterinaria_patitas/veterinaria_patitas/baja.html
@@ -45,8 +45,8 @@
     </header>
 
     <Section class="formulario">
-        <form method="POST" action="php/enviar_logeo.php" class="row g-3 needs-validation" novalidate>
-            <h1 class=titulo>Iniciar Sesión</h1>
+        <form method="POST" action="php/enviar_baja.php" class="row g-3 needs-validation" novalidate>
+            <h1 class=titulo>Dar de baja mi cuenta</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="email" name="correo" class="form-control"
                         id="validationCustom01" placeholder="C@rreo electrónico" required
@@ -62,9 +62,8 @@
                         <div class="invalid-feedback"> Recuerde que su contraseña debe de contener solo letras y números. Tamaño mínimo: 6 caracteres. Tamaño máximo: 10 caracteres.</div>
                     </div>
 
-                    <input type="submit" value="Iniciar" class="button"></a>
-                    <p>¿No tienes cuenta aún? <a class="link" href="registro.html"><b>Registrate </b></a></p>
-                    <p>¿Quieres dar de baja tu cuenta?<a class="link" href="baja.html"> Dar de baja</a></p>
+                    <input type="submit" value="Dar baja" class="button"></a>
+                    
 
     </section>
 
