--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -77,11 +77,11 @@
                     <img src="img/2.jpg" alt="De Compras">
                 </div>
                 <div class="carousel__elemento">
-                    <img src="img/4.jpg" alt="Grupo de perros">
+                    <img src="img/1.jpg" alt="Grupo de perros">
                     <p> </p>
                 </div>
                 <div class="carousel__elemento">
-                    <img src="img/1.jpg" alt="Saludo canino">
+                    <img src="img/4.jpg" alt="Saludo canino">
                     <p></p>
                 </div>
 
@@ -114,7 +114,7 @@
     </div>
 
     <Section class="formulario">
-        <form method="POST" action="php/enviar_datos.php" class="row g-3 needs-validation" novalidate>
+        <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
             <h1 id=titulo>Contáctanos</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="text" name="nombre_apellido" class="form-control"
