--- a/veterinaria_patitas/veterinaria_patitas/login.html
+++ b/veterinaria_patitas/veterinaria_patitas/login.html
@@ -45,7 +45,7 @@
     </header>
 
     <Section class="formulario">
-        <form method="POST" action="php/enviar_logeo.php" class="row g-3 needs-validation" novalidate>
+        <form method="POST" action="enviar_logeo.php" class="row g-3 needs-validation" novalidate>
             <h1 class=titulo>Iniciar Sesión</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="email" name="correo" class="form-control"
@@ -65,6 +65,7 @@
                     <input type="submit" value="Iniciar" class="button"></a>
                     <p>¿No tienes cuenta aún? <a class="link" href="registro.html"><b>Registrate </b></a></p>
                     <p>¿Quieres dar de baja tu cuenta?<a class="link" href="baja.html"> Dar de baja</a></p>
+                    <p>¿Haz cambiado algun dato de contacto?<a class="link" href="modificacion.html"> Actualizalos</a></p>
 
     </section>
 
