--- a/veterinaria_patitas/veterinaria_patitas/contacto.html
+++ b/veterinaria_patitas/veterinaria_patitas/contacto.html
@@ -115,6 +115,7 @@
 
     <Section class="formulario">
         <form method="POST" action="enviar_datos.php" class="row g-3 needs-validation" novalidate>
+            <div> <p></p></div>
             <h1 id=titulo>Contáctanos</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="text" name="nombre_apellido" class="form-control"
