--- a/veterinaria_patitas/veterinaria_patitas/login.html
+++ b/veterinaria_patitas/veterinaria_patitas/login.html
@@ -63,11 +63,12 @@
                     </div>
 
                     <input type="submit" value="Iniciar" class="button"></a>
-                    <p>¿No tienes cuenta aún? <a class="link" href="registro.html"><b>Registrate </b></a></p>
-                    <p>¿Quieres dar de baja tu cuenta?<a class="link" href="baja.html"> Dar de baja</a></p>
-                    <p>¿Haz cambiado algun dato de contacto?<a class="link" href="modificacion.html"> Actualizalos</a></p>
+              
 
     </section>
+    <p>¿No tienes cuenta aún? <a class="link" href="registro.html"><b>Registrate </b></a></p>
+    <p>¿Quieres dar de baja tu cuenta?<a class="link" href="baja.html"> <b>Dar de baja</b></a></p>
+    <p>¿Haz cambiado algún dato de contacto?<a class="link" href="modificacion.html"> <b>Actualizalos</b></a></p>
 
     <!-- FUNCION SCRIPT PARA FORMULARIO BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
