--- a/veterinaria_patitas/veterinaria_patitas/baja.html
+++ b/veterinaria_patitas/veterinaria_patitas/baja.html
@@ -45,7 +45,7 @@
     </header>
 
     <Section class="formulario">
-        <form method="POST" action="php/enviar_baja.php" class="row g-3 needs-validation" novalidate>
+        <form method="POST" action="enviar_baja.php" class="row g-3 needs-validation" novalidate>
             <h1 class=titulo>Dar de baja mi cuenta</h1>
             <div class="contenedor">
                 <div class="input-contenedor"><input type="email" name="correo" class="form-control"
