--- a/veterinaria_patitas/veterinaria_patitas/registro.html
+++ b/veterinaria_patitas/veterinaria_patitas/registro.html
@@ -68,7 +68,7 @@
                 </div>
                 
                     <div class="input-contenedor"><input type="text" name="apellido" class="form-control"
-                            id="validationCustom01" placeholder="Apellido" required pattern="[A-Za-z0-9]{2,40}"
+                            id="validationCustom01" placeholder="Apellido" required pattern="{2,40}"
                             title="">
                         <div class="valid-feedback"> OK!</div>
                         <div class="invalid-feedback"> Complete los datos con letras y números. Tamaño mínimo: 2 caracteres. Tamaño máximo: 40  caracteres.</div>
